# rpcsvc-proto

./: .gitignore  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
rpcgen/: Makefile.am  cpp  rpc_main.c  rpc_parse.c
rpcsvc/: Makefile.am
